* Replace glyphicons with font awesome in datepicker. FIX: error reflecting undefined if empty startDate is blurred / before form is defined. * Add validation for date range (errors if event ends before it begins).

--- a/public/assets/css/scss/modules/_eventForm.scss
+++ b/public/assets/css/scss/modules/_eventForm.scss
@@ -1,3 +1,11 @@
-.eventForm .input-group-btn .btn {
-	height: 34px;
+.eventForm {
+	table:focus {
+		outline: none;
+	}
+	.input-group-btn .btn {
+		height: 34px;
+	}
+	.message-invalid {
+		margin-top: 4px;
+	}
 }
